# Tweets-Sentiment-Analysis

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
notebook/: sentiment analysis.ipynb
src/: prediction_visualization.py  text_clean.py
